JS Video play/pause

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Ocean (720P)-->
     <!-- https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment -->
     <div class="player">
-        <video src="https://pixabay.com/videos/download/video-28745_source.mp4?attachment" class="video" playsline></video>
+        <video src="https://pixabay.com/videos/download/video-28745_source.mp4?attachment" class="video" playsinline></video>
         <!-- Show Controls -->
         <div class="show-controls">
             <!-- Controls Container -->
@@ -30,7 +30,7 @@
                     <div class="controls-left">
                         <!-- Play/Pause -->
                         <div class="play-controls">
-                            <i class="fas fa-play-circle" title="Play" id="play-btn"></i>
+                            <i class="fas fa-play-circle" title="Play" id="play-button"></i>
                         </div>
                         <!-- Volume Controls -->
                         <div class="volume">
